fix alignment

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ input::-webkit-inner-spin-button, input::-webkit-outer-spin-button {
 .rating-slider .filled {
     color: var(--filled);
     position: absolute;
-    top: 0; left: 0;
+    top: 0;
     overflow: hidden;
     white-space: nowrap;
     width: 0;
